--- a/src/component/Header/MenuList/Dropdown/Dropdown.css
+++ b/src/component/Header/MenuList/Dropdown/Dropdown.css
@@ -7,6 +7,7 @@
     text-align: start;
     padding-inline-start: 15px !important;
     font-size: 1rem !important;
+    border-top: 3px solid orange;
   }
   
   .dropdown-menu li {
