--- a/src/component/Header/MenuList/Dropdown/Dropdown.css
+++ b/src/component/Header/MenuList/Dropdown/Dropdown.css
@@ -8,6 +8,7 @@
     padding-inline-start: 15px !important;
     font-size: 1rem !important;
     border-top: 3px solid orange;
+    z-index: 99;
   }
   
   .dropdown-menu li {
