--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
 
 @media (min-width: 1200px) {
   .p-container, .p-container-sm, .p-container-md, .p-container-lg, .p-container-xl {
-    max-width: 1140px;
+    max-width: 1340px; 
+    /* 1140  */
   }
 }
