--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
  --primeHalka : #274463;
 }
 
-/* to impliment color from root , follow below example: 
+/* to implement color from root , follow below example: 
 color: var(--primeBlue) */
 
 body {
