--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,4 +1,4 @@
-.p-container-fluid
+/* .p-container-fluid
 {
 width:100%;
 }
@@ -196,4 +196,4 @@ width: 95%;
 max-width: 95%;
 width: 95%;
 }
-}
+} */
