at a glance added to #3

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=DynaPuff&display=swap');
+
 /* css made for container  */
 .p-container,
 .p-container-fluid,
