--- a/src/component/Home/CommunityReviews/CommunityReviews.css
+++ b/src/component/Home/CommunityReviews/CommunityReviews.css
@@ -20,3 +20,12 @@
     background-color: #FAF6F7;
     border-radius: 10px;
 }
+
+@media screen and (max-width: 960px) {
+    .textReview{
+        color: #002C53;
+        margin-left: 70px;
+        position: relative;
+        top: 40px;
+    }
+}
