feature members page added

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=DynaPuff&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=DynaPuff&family=Inter&display=swap');
 
 /* css made for container  */
 .p-container,
