--- a/src/component/Home/CommunityReviews/CommunityReviews.css
+++ b/src/component/Home/CommunityReviews/CommunityReviews.css
@@ -21,6 +21,15 @@
     border-radius: 10px;
 }
 
+.fill-orange-600 {
+    fill: #fe6c3e;
+    margin-top: 20px;
+}
+
+.flex-shrink-0, .shrink-0 {
+    flex-shrink: 0;
+}
+
 @media screen and (max-width: 960px) {
     .textReview{
         color: #002C53;
