--- a/src/component/Home/TopBlogs/BlogCarousel/BlogCarousel.css
+++ b/src/component/Home/TopBlogs/BlogCarousel/BlogCarousel.css
@@ -21,8 +21,23 @@
     border-radius: 12px;
 }
 
-.p-carousel .p-carousel-indicators .p-carousel-indicator button{
+.p-carousel-item-active{
+    /* position: relative;
+    left: -10px; */
+
+}
+
+/* .p-carousel .p-carousel-indicators .p-carousel-indicator button{
     border-radius: 50%;
     width: 1.2rem;
     height: 1.2rem;
+} */
+
+@media screen and (max-width:960px){
+    .blogTitle:after{
+        content: '';
+        display: block;
+        padding-bottom: 2rem;
+        border-bottom: 1px solid #dbdada;
+    }
 }
