--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -77,6 +77,11 @@
     .NavbarItems {
       position: relative;
     }
+    .logoNRB{
+      position: relative;
+      top: -20px;
+      left: -60px;
+    }
 
     .navbar > ul {
         margin-block-start: 0;
