--- a/src/component/Home/TopBanner/TopBanner.css
+++ b/src/component/Home/TopBanner/TopBanner.css
@@ -1,5 +1,5 @@
 .heightCalc{
-    min-height: calc(100vh-74px);
+    min-height: calc(100vh - 250px);
 }
 .basis-auto{
     flex-basis: auto;
@@ -22,6 +22,12 @@
 @media (min-width: 960px){
     .basis-auto {
         flex-basis: 50%;
+    }
+    .topBannerContainer{
+        height: 530px !important;
+    }
+    .imageTop{
+        max-height: 520px !important;
     }
 
 }
