--- a/src/component/Membership/Members/MemberList/MemberListToSHow/MemberListToShow.css
+++ b/src/component/Membership/Members/MemberList/MemberListToSHow/MemberListToShow.css
@@ -5,6 +5,7 @@
     padding: 1.7rem 1.2rem; */
     border-radius: 10px;
     box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
+    font-family: 'Rubik', sans-serif;
 }
 .memberImgHolder img{
     width: 100%;
