--- a/src/component/YoungCongress/YCAbout/YCAboutpage.css
+++ b/src/component/YoungCongress/YCAbout/YCAboutpage.css
@@ -17,78 +17,88 @@
 .yca-title{
  text-align: center;
  padding-top: 30px;
-
+ padding-left: 5%;
 }
 .yca-title h1{
-font-family: Verdana, Geneva, Tahoma, sans-serif;
-font-weight: 600;
-font-style: italic;
+  text-align: start;
+font-weight: 100;
+/* font-style: italic; */
+font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 .yca-join-btn{
- display: flex;
- align-items: end;
- justify-content: end;
- margin-right: 120px;
- margin-top: 200px;
+  
 }
 .yca-about-section{
-display: flex;
-align-items: start;
-justify-content: space-around;
-flex-wrap: wrap;
-margin-top: 60px;
-margin-left: auto;
-margin-right: auto;  
-
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto auto; 
+  padding: 40px 0px;
 }
 .yca-about-text{
- max-width: 400px;
-}
-.yca-presenet-them{
- max-width: 400px;
-}
-.yca-about-text h3{
-color:rgb(70, 214, 41);
-font-size: 25px;
-}
-.yca-about-text p{
- font-size: 19px;
- font-weight:500;
- line-height: 30px;
-}
-
-.yca-research h1, .yca-audience h1,.yca-contact h1{
-font-size: 19px;
-
-}
-.yca-research p, .yca-audience p,.yca-contact p{
- font-size: 16px;
- font-weight: 100;
- text-align: start;
+  /* background: rgb(151, 187, 68); */
+  padding: 20px;  
+  /* background-image: url('../../../assets/image//YCAbout/aboutus.png'); */
  
+}
+ .yca-about-text h3{
+  font-size: 20px;
+  border-bottom: 5px solid red;
+  padding: 5px;
+  letter-spacing:.2px;
  }
+ .yca-about-text-p{
+  font-size: 18px;
+  line-height: 30px;
+  text-align: start;
+  font-weight: 100;
+  letter-spacing:.5px;
+ }
+.yca-presenet-them{
+  /* background: rgb(91, 206, 221); */
+  padding-left: 30px;
+}
+.yca-research h1,.yca-audience h1,.yca-contact h1{
+  font-size: 25px;
+  font-weight: 600;
+  color: rgb(192, 70, 54);
+  letter-spacing:.2px;
+
+}
+  /* .yca-contact h1::before{
+  content: "\22C4";
+  color: rgb(248, 4, 4);
+  font-weight: bold; 
+  } */
+.yca-research p,.yca-audience p,.yca-contact p{
+    font-size: 18px;
+    text-align: start;
+    font-weight: 100;
+    line-height: 30px;
+    letter-spacing:.5px;
+}
+.yca-join-btn Button{
+  margin-left: 5%;  
+  margin-top: 5%;
+}
+ 
 @media only screen and (max-width: 1400px) {
   .yca-description{ 
       width: 85%;  
      height: 540px; 
-   }    
-   .yca-join-btn{
-     display: flex;
-     align-items: end;
-     justify-content: end;
-     margin-right: 80px;
-     margin-top: 100px;
-   }
+   }     
 }
 /* MISSION - VISSION  */
 .yc-mission-vision-container{
 margin: 0px 5%;
 }
 .yc-mission-container{
+  margin-top: -30px;
 display: grid;
-grid-template-columns: 70% 30%;
-grid-template-rows: 300px 300px;
-margin-bottom: -100px;
+/* background: #000; */
+grid-template-columns: 80% 20%;
+grid-template-rows: auto auto; 
+padding: 40px 0px;
+
 } 
 .yc-mission-textlist{
 display: grid;
@@ -108,6 +118,8 @@ background-image: url('../../../assets/image/YCAbout/mission.jpg');
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
+border-radius: 10px;
+
 }
 .yc-mission-title{
 font-size: 30px;
@@ -123,7 +135,8 @@ font-size: 20px;
 .yc-vision-container{
 display: grid;
 grid-template-columns: 30% 70%;
-grid-template-rows: 300px 300px;
+grid-template-rows: 230px auto; 
+padding: 40px 0px;
 }
 
 .yc-vision-flex{
@@ -131,13 +144,14 @@ display: grid;
 grid-template-columns: 40% 60%;
 }
 .yc-vision-bg-img{
-background-image: url('../../../assets/image/YCAbout/mission.jpg');
-background-repeat: no - repeat;
+background-image: url('../../../assets/image/YCAbout/vision\ .jpg');
+background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
+border-radius: 10px;
 }
 .yc-vision-textlist{
-  padding-left: 20px;
+  padding-left: 50px;
 }
 .yc-visionlist-item ul li{
   list-style: none;
@@ -161,47 +175,53 @@ font-size: 20px;
 
 /* OBJECTIVE  */
 .yc-objective-container{
-  width: 100%;
-  margin-left: auto;
-  margin-top: 30px;
-  margin-right: auto;
-  display: flex;  
-  align-items: center;
-  justify-content: space-around;
- flex-wrap: wrap;
-}
-.yc-objective-icon{
-  background:#f3f7f5 ;
-  border-radius: 10px;
-}
-.yc-objective-icon img {
-  width: 300px;
-} 
-.yc-objective-title{
-  font-size: 30px;
-  color:#e02d45;
+ display: grid;
+ grid-template-columns: 25% 75%;
+ grid-template-rows: auto auto; 
+padding: 40px 0px;
 
 }
-.yc-objective-textlist{
-  width: 500px;
+.yc-objective-bg-img{
+  background-image: url('../../../assets/image/YCAbout/objective.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-bottom-left-radius:10px ;
+  border-top-left-radius:10px ;
+
 }
-.yc-objective-item ul {
-  line-height: 30px; 
-  list-style-type:square;
-}
-/* YOUNG CONGRESS MEMBERS  */
-.ycateam-container{
-  margin: 30px 0px;
-}
- .ycateam-header{
-  text-align: center;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  padding: 50px 0px;
-  font-family: monospace;
-  font-size: 50px;
-  font-style: italic;
+ .yc-objective-textlist{
+  /* padding: 30px ; */
+  background: #f3f7f5;
+  padding-left: 30px;
+  border-bottom-right-radius:10px ;
+  border-top-right-radius:10px ;
+ }
+ .yc-objective-title{
+  color: #176ae7;
+ }
+ .yc-objective-item ul li{
+  line-height: 30px;
+  font-size: 20px;
+  list-style: none;
+ }
+ .yc-objective-item ul li::before{
+  content: "\22C4";
+  color: #176ae7;
+  font-weight: bold;
+  display: inline-block;
+  width: 2em;
+  height: 2em;
+  margin-left: -2em;
  }
 /* young congress team page  */
+.ycateam-header{
+  padding: 25px 0px;
+  text-align: center;
+  font-size: 50px;
+  font-weight: 100;
+  font-family:'Times New Roman', Times, serif;
+}
 .ycateam{
   display: flex;
   align-items: center;
