--- a/src/component/Membership/Members/MemberServices/MemberServicesHeader/MemberServicesHeader.css
+++ b/src/component/Membership/Members/MemberServices/MemberServicesHeader/MemberServicesHeader.css
@@ -14,6 +14,10 @@ height: 50vh;
 .growthSpanService{
     font-size: 1.2rem;
 }
+/* .growthSpanService{
+    font-size: 1.2rem;
+} */
+
 
 @media screen and (max-width: 400px) {
     .memberServiceContainer{
