--- a/src/component/YoungCongress/YCAbout/YCAboutpage.css
+++ b/src/component/YoungCongress/YCAbout/YCAboutpage.css
@@ -45,6 +45,8 @@ font-family:Verdana, Geneva, Tahoma, sans-serif;
   border-bottom: 5px solid red;
   padding: 5px;
   letter-spacing:.2px;
+font-size: 30px;
+
  }
  .yca-about-text-p{
   font-size: 18px;
@@ -89,9 +91,11 @@ font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 /* MISSION - VISSION  */
 .yc-mission-vision-container{
-margin: 0px 5%;
+ border-radius: 10px;
+/* background: #ebe8e8; */
 }
 .yc-mission-container{
+
   margin-top: -30px;
 display: grid;
 /* background: #000; */
@@ -123,7 +127,8 @@ border-radius: 10px;
 }
 .yc-mission-title{
 font-size: 30px;
-padding-left: 20px;
+/* padding-left: 20px; */
+padding-left: 7%;
 color: #e02d45;
 }
 .yc-missionlist-item ul li{
@@ -138,7 +143,6 @@ grid-template-columns: 30% 70%;
 grid-template-rows: 230px auto; 
 padding: 40px 0px;
 }
-
 .yc-vision-flex{
 display: grid;
 grid-template-columns: 40% 60%;
@@ -160,6 +164,8 @@ font-size: 20px;
 }
 .yc-vision-title{
   color: rgb(92, 202, 29);
+font-size: 30px;
+
 }
 .yc-visionlist-item ul li::before{
   content: "\22C4";
@@ -192,12 +198,14 @@ padding: 40px 0px;
 }
  .yc-objective-textlist{
   /* padding: 30px ; */
-  background: #f3f7f5;
+  /* background: #f3f7f5; */
   padding-left: 30px;
   border-bottom-right-radius:10px ;
   border-top-right-radius:10px ;
  }
  .yc-objective-title{
+font-size: 30px;
+
   color: #176ae7;
  }
  .yc-objective-item ul li{
