--- a/src/component/YoungCongress/YCMembers/YCMembersStyle.css
+++ b/src/component/YoungCongress/YCMembers/YCMembersStyle.css
@@ -32,11 +32,13 @@ border-radius: 10px;
     display: flex;
     align-items: center;
     /* justify-content:space-around; */
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;   
  }
-
- .ycm-profile{
+.ycm-profile{
+   padding:10px;
+} 
+ .ycm-card{
     /* padding: 20px; */
      box-shadow: none;
      /* margin-top: 30px; */
