--- a/src/component/Galllery/PhotoGallery/PhotoGallaryGrid.css
+++ b/src/component/Galllery/PhotoGallery/PhotoGallaryGrid.css
@@ -1,9 +1,14 @@
 .photo-Gallary{
     margin: 3% 10%;
 }
+.photo-gallary-row{
+    background: #ffffff;
+    padding:3%;
+    border-radius: 10px;
+} 
 .phtoto-gallary-column img{
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 border-radius:10px; 
 width: 100%;
-border: 8px solid #dcdddb;
+/* border: 8px solid #dcdddb; */
 }
