registration form added

--- a/src/component/Membership/MemberRegistration/MemberRegistrationForm.css
+++ b/src/component/Membership/MemberRegistration/MemberRegistrationForm.css
@@ -29,3 +29,7 @@ box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 .reviewRegName{
         color: white;
 }
+
+input#file-upload-button{
+        padding-left: 6rem;
+}
