--- a/src/component/Commitees/ExecutiveAmbassador/ExecutiveAmbassadorProfile.css
+++ b/src/component/Commitees/ExecutiveAmbassador/ExecutiveAmbassadorProfile.css
@@ -1,29 +1,34 @@
 
- .executiveambassador{
+ .executive-ambassador{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    /* background: #f3f7f5; */
+    /* margin: 5%; */
+    border-radius: 10px;
 }
-.executiveprofile{
+ 
+.executive-ambassador-profile{
+    padding: 10px 10px !important;
+}
+.executive-card{
     border: none !important;
     box-shadow: none !important;
-    margin: 0px 60px;
 }
-.executiveprofileimg{      
-    /* width: 100%; */
-    /* border-top-right-radius: 8px ;
-    border-top-left-radius:8px; */
-    /* border-radius: 50%; */
-    border-radius: 50%; 
+.executive-profile-img {      
+   margin-right: 30px;
+    width: 120px !important; 
+    border-radius: 50%;  
+    margin: 20px;
     border: 6px solid rgb(226, 224, 224);
     /* border-radius: 8px; */
 }
 /* .cabinetcardquote{
     font-size: 18px;
     margin-top: -15px;
-} */
-.executivename{
+} */ 
+.executive-name{
  font-size: 15px;
  text-align: center;
  margin-top: -8px;
@@ -35,17 +40,17 @@
  border-radius: 4px;
  letter-spacing: .8px;
 }
-.executivetitle{
+.executive-title{
     font-size: 15px;
     text-align: center;
 }
-.executivesocialicons{  
+.executive-social-icons{  
     margin-top: -20px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
- .executivesocialicons a > i {
+ .executive-social-icons a > i {
     font-size: 20px;   
     /* background: rgb(92, 85, 185); */
     /* color: black !important; */
