added some feature in service page

--- a/src/component/Services/ServicesCategory.css
+++ b/src/component/Services/ServicesCategory.css
@@ -105,7 +105,7 @@ align-items: center;
     font-weight: 100;
     text-align: start;
  }
- .sc-phone p span{
+ .sc-phone-span{
     font-weight: 500;
     font-size: 20px;
     color: #333;
