--- a/src/component/YoungCongress/YCActivities/YCAtivitesStyle.css
+++ b/src/component/YoungCongress/YCActivities/YCAtivitesStyle.css
@@ -8,7 +8,7 @@
     padding: 10px 0px;
     font-weight: bold;
 }
-.ycativity-header h1 span{
+.ycativity-header-span{
     font-size: 35px;
     font-weight: bold;
  border-bottom: 2px solid rgb(224, 226, 74);
