--- a/src/pages/Commitees/AdvisoryCouncil/AdvisorCouncil.css
+++ b/src/pages/Commitees/AdvisoryCouncil/AdvisorCouncil.css
@@ -1,3 +1,8 @@
+.advisor-council-container-para{
+    font-size: 30px;
+    font-weight: 600;
+    text-align: center;
+}
 .advisorBtn{
     display: flex;
     justify-content: center;
