--- a/src/pages/Commitees/CabinateMembers/CabinateMembers.css
+++ b/src/pages/Commitees/CabinateMembers/CabinateMembers.css
@@ -2,7 +2,7 @@
     padding: 15px;
     overflow-x: hidden;
 }
-.cabinet p{
+.cabinet-para{
     text-align: center;
     font-size: 60px;
     font-weight: bold;
