--- a/src/component/YoungCongress/YCMembers/YCMembersStyle.css
+++ b/src/component/YoungCongress/YCMembers/YCMembersStyle.css
@@ -1,49 +1,51 @@
  .ycm-container{
- margin: 50px 100px;
+ /* margin: 50px 100px; */
+ margin: 1% 15%;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
+ /* background: rgb(218, 185, 185); */
+ padding: 10px;
+ } 
+ .ycm-header-container{
+   background: #f3f7f5;
+
  }
- 
- .ycm-header{
-    padding: 10px 100px;   
+ .ycm-header{ 
 background: #f3f7f5;
-border-radius: 10px;
  }
- .ycm-header h2, span {
-    font-size: 25px;
-    letter-spacing: 1px;
+ .ycm-header h2 {
+    font-size: 32px;
+    letter-spacing: .5px;
+    line-height: 40px;
     font-weight: 600;
- }
- .ycm-header  span {
-     font-family:'Times New Roman', Times, serif;
-     font-style: italic;
- }
- .ycm-header p{
+    font-family:'Times New Roman', Times, serif;
+ } 
+ 
+ .ycm-header-para{
     line-height: 30px;
     font-size: 20px;
     text-align: start;
     font-weight: 100;
     letter-spacing: 1px;
-}
- .ycm{
-    display: flex;
-    align-items: center;
-    /* justify-content:space-around; */
-    justify-content: space-around;
-    flex-wrap: wrap;   
- }
-.ycm-profile{
-   padding:10px;
 } 
+.ycm-header-sticker img{
+   width: 300px;
+
+}
+  /* .ycm{
+   width: 100%;
+ }  */
+  .ycm {
+   padding:10px 0px;
+  }
  .ycm-card{
     /* padding: 20px; */
      box-shadow: none;
      /* margin-top: 30px; */
-     padding: 0px !important;
-     margin: 0px !important;
+   
  }
  .ycm-flex img{
  border-radius: 20px !important;
