--- a/src/component/YoungCongress/YCMembers/YCMembersStyle.css
+++ b/src/component/YoungCongress/YCMembers/YCMembersStyle.css
@@ -1,20 +1,28 @@
+ .young-congress-main-conatiner{
+   margin: .5% 10%;
+ }
  .ycm-container{
  /* margin: 50px 100px; */
- margin: 1% 15%;
+ /* margin: 1% 15%; */
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
- /* background: rgb(218, 185, 185); */
+ background: rgb(110, 141, 198);
  padding: 10px;
+ border-radius: 10px !important;
+
  } 
  .ycm-header-container{
    background: #f3f7f5;
-
+   border-radius: 10px !important;
+ /* border-top-left-radius: 30px ; */
  }
  .ycm-header{ 
 background: #f3f7f5;
+border-radius: 10px !important;
+
  }
  .ycm-header h2 {
     font-size: 32px;
@@ -72,14 +80,17 @@ width: 100%;
     margin: 20px 0px;      
 }
 .ycm-btn button{
-      padding: 10px;
-background: rgb(72, 125, 206);
+      padding: 13px;
+/* background: rgb(72, 125, 206); */
+background: #000;
 border: none;
 font-size: 15px;
 border-radius: 8px;
 color: #ffffff;
-font-weight: bold;
+font-weight: 600;
 cursor: pointer;
+font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
  /* .ycm-join-btn{
     font-size: 10px !important;
