--- a/src/component/Commitees/CabinateMembers/CabinateCard.css
+++ b/src/component/Commitees/CabinateMembers/CabinateCard.css
@@ -1,8 +1,12 @@
-
+.cabinet-card-main-container{
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    background: #bcb8c5;
+border-radius: 10px;
+}
 .cabinetorgcenterdiv{
     display: flex;
     justify-content: center;
-    width: 100vw;
+    /* width: 100vw; */
     /* background: #000; */
 }
 .cabinetorganizer{
@@ -20,7 +24,7 @@
 }
 
 .cabinetcard{
-    box-shadow:  rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px !important;   
+    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px !important;    */
     /* box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px; */
     /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px !important; */
     width: 25rem;
