--- a/src/pages/Commitees/ExecutiveAmbassador/ExecutiveAmbassador.css
+++ b/src/pages/Commitees/ExecutiveAmbassador/ExecutiveAmbassador.css
@@ -1,6 +1,9 @@
 .executive-container{
-    padding: 15px;
+     margin: .5% 10%;
     overflow-x: hidden;
+    border-radius: 10px;
+    background:#9bd682;
+    padding: 10px;
 }
   .executive-container-para{
     text-align: center;
@@ -12,5 +15,10 @@
 .memberBtn{
     display: flex;
     justify-content: center;
-    margin: 20px 0px;
+    margin: 20px 0px;   
+}
+.memberBtn button{
+color: #ffffff;  
+background:#333;
+border: none;
 }
