--- a/src/component/YoungCongress/YCActivities/YCAtivitesStyle.css
+++ b/src/component/YoungCongress/YCActivities/YCAtivitesStyle.css
@@ -1,5 +1,6 @@
 .ycativity-container{
-    margin-top: 200px;
+    /* margin-top: 200px; */
+    margin: .5% 13%;
 }
 .ycativity-header h1{
     text-align: center;
@@ -33,7 +34,7 @@
     .ycativity-blood-bg-bottom{
         position: absolute;
         background: rgb(230, 5, 5);
-        opacity: .3;
+        opacity: .5;
         width: 100%;   
         height: 120px !important;
         border-bottom-left-radius: 10px;
@@ -65,8 +66,7 @@
         opacity: 1 !important;     
         font-size: 15px;
       letter-spacing: 1px;
-     color: #ffffff;   
-
+     color: #ffffff;  
     }
     .ycativity-foodImg {     
         background-image: url('../../../assets/image/YCAbout/foodDistribution.jpg');  
@@ -79,7 +79,7 @@
     .ycativity-food-bg-bottom{
         position: absolute;
         background: rgb(230, 208, 5);
-        opacity: .3;
+        opacity: .5;
         width: 100%;   
         /* height: 150px !important; */
         height: 120px;
@@ -129,7 +129,7 @@
     .ycativity-naturaldisaster-bg-bottom{
         position: absolute;
         background: rgb(31, 230, 5);
-        opacity: .3;
+        opacity: .5;
         width: 100%;   
         height: 120px;
         border-bottom-left-radius: 10px;
@@ -177,7 +177,7 @@ display: none;
     .ycativity-flood-bg-bottom{
         position: absolute;
         background: rgb(176, 18, 216);
-        opacity: .3;
+        opacity: .5;
         width: 100%;   
         height: 120px !important;
         border-bottom-left-radius: 10px;
