--- a/src/pages/Commitees/ExecutiveAmbassador/ExecutiveAmbassador.css
+++ b/src/pages/Commitees/ExecutiveAmbassador/ExecutiveAmbassador.css
@@ -2,7 +2,7 @@
      margin: .5% 13%;
     overflow-x: hidden;
     border-radius: 10px;
-    background:#9bd682;
+    background:#94a4da;
     padding: 10px;
 }
   .executive-container-para{
