--- a/src/component/Contact/ContactInfo.css
+++ b/src/component/Contact/ContactInfo.css
@@ -3,7 +3,7 @@
     /* background:  ; */
     margin: .5% 13%;
     padding: 50px 15px;
-    background: #ffffff;
+    /* background: #ffffff; */
     border-radius: 10px;
     /* background: #000; */
  }
@@ -38,7 +38,7 @@ column-rule: #ffffff;
         font-weight:bold; 
     }
  .contactinfo-us-txt{
-   background: #ffffff;;
+   /* background: #ffffff;; */
  }
 
  /* ConatctForm  */
@@ -46,7 +46,7 @@ column-rule: #ffffff;
  .contact-form-conatiner{
    border-radius: 10px;
     /* background: #000; */
-    padding: 5px 0px;
+    padding: 3px 0px;
  background: #4453d9;
  }
  .contact-form{
@@ -57,35 +57,17 @@ column-rule: #ffffff;
  }
  .contact-form-title h5{
    font-size: 30px;
-   text-align: center;
+   text-align: start;
   color: #ffffff;   
   font-style: italic;
  }
- .contactinfo-us{
-   background: #ffffff;
- }
+
 .contact-form-submit-btn{
    background: #ffffff;
     offset: none;
     color: #333;
     margin-left: 20px;
 }
-/*  
- .contact-form-flex-01, 
- .contact-form-flex-02{
-display: flex;
- align-items: center;
- }
- .contact-form-submit-btn{
-    width: 120px !important;  
- }
- .contact-form-name-input{
-
- }
- .contact-form-submit-btn button{
-font-size: 20px !important; 
- } */
-
  /* CONTACTINFOMAP  */
  .contact-info-map-bn-iframe, .contact-info-map-us-iframe{
    width: 100%;
@@ -94,4 +76,24 @@ font-size: 20px !important;
    height: 360px;
    border-radius: 15px;
  }
- 
+ .contact-info-map-us{
+   margin-left: 10px;
+ }
+ .contactinfo-bn{
+   background: #496878;
+   color: #ffffff;
+   margin-left: .2px;
+   border-radius: 10px;
+ }
+ .contact-info-map-bn{
+   margin-top: 10px;
+ }
+ .contact-info-map-us{
+   margin-top: 6px;
+ }
+   .contactinfo-us{
+      background: #f3f7f5;
+      margin-left: .2px;
+      margin: 20px 0px;
+      border-radius: 10px;
+ }
