--- a/src/component/Services/ServicesCategory.css
+++ b/src/component/Services/ServicesCategory.css
@@ -64,7 +64,8 @@ padding: 30px 0px;
    left: 0;
    right: 0;
    border-radius: 10px;
-   background-color: #000;
+   /* background-color: #000; */
+   background: #000A3D;
    overflow: hidden;
    width: 100%;
    height: 0;
@@ -120,7 +121,8 @@ padding: 30px 0px;
  }
  .sc-doctor-title h3{
    text-align: center; 
-   background: #000;
+   /* background: #000; */
+   background: #000A3D;
    margin-top: 60px;
   padding: 8px;
   color: #ffffff;
