--- a/src/component/Membership/MemberRegistration/MemberRegistrationHeader.css
+++ b/src/component/Membership/MemberRegistration/MemberRegistrationHeader.css
@@ -8,7 +8,16 @@ padding-bottom: 3rem;
 background-image: url(/public/assets/image/reg/RegistrationEdited.png);
 background-repeat: no-repeat;
 background-position: center;
-background-size: cover;
+background-size: 100% 100%;
 height: 50vh;
 box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+
+@media screen and (max-width: 960px) {
+
+    .memberRegHeadContainer{
+        background-size: cover;
+    }
+    
 }
