unnecessary css commented for #16

--- a/src/component/Home/TopServices/TopService.css
+++ b/src/component/Home/TopServices/TopService.css
@@ -4,7 +4,7 @@
     /* margin: 20px 0px; */
     padding-bottom: 3rem;
 }
-.serviceContent{
+/* .serviceContent{
     background-color: #D8EAFA;
     padding: .8rem;
     margin: .5rem;
@@ -20,4 +20,4 @@
 .textPrimeService{
     color: var(--primeBLue);
     font-family: 'Inter', sans-serif;
-}
+} */
