--- a/src/component/Membership/Members/MemberServices/MemberServicesHeader/MemberServicesList.css
+++ b/src/component/Membership/Members/MemberServices/MemberServicesHeader/MemberServicesList.css
@@ -1,10 +1,5 @@
-.topServiceContainer{
-    background-color: #FAF6F7;
-    border-radius: 10px;
-    /* margin: 20px 0px; */
-    padding-bottom: 3rem;
-}
-.serviceContent{
+
+/* .serviceContent{
     background-color: #D8EAFA;
     padding: .8rem;
     margin: .5rem;
@@ -20,4 +15,4 @@
 .textPrimeService{
     color: var(--primeBLue);
     font-family: 'Inter', sans-serif;
-}
+} */
