--- a/src/component/Commitees/CabinateMembers/CabinateCard.css
+++ b/src/component/Commitees/CabinateMembers/CabinateCard.css
@@ -1,13 +1,14 @@
  .cabinet-card-main-container{
     border-radius: 10px;
     padding: 30px 0px;
-    background: #f3f7f5;
-
+    /* background: #f3f7f5; */
+    background: #f3f7f3;
  }
  .cabinate-card{
     width: 300px !important;
     height: auto;
-    background: #333;
+    /* background: #333; */
+    background: #567572FF;
 
     /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
