--- a/src/pages/Commitees/AdvisoryCouncil/AdvisorCouncil.css
+++ b/src/pages/Commitees/AdvisoryCouncil/AdvisorCouncil.css
@@ -1,13 +1,45 @@
 .advisor-council-container{
-    margin: .5% 10%;
+    margin: 0% 10%;
+    background: #195190FF;
+    border-radius: 10px;
+    margin-top: -25px;
+    padding-bottom: 30px;
 }
 .advisor-council-container-para{
-    font-size: 30px;
+    font-size: 35px;
     font-weight: 600;
+    font-style: italic;
     text-align: center;
+    padding: 20px;
+    color: #195190FF;
+    background: #f3f7f5;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
 }
-.advisorBtn{
+.advisor-memberBtn{
     display: flex;
     justify-content: center;
-    margin: 20px 0px;
+    margin: 20px 0px;   
+    padding: 20px;
+}
+.advisor-memberBtn button{
+color: #195190FF;  
+background:#ffffff;
+border: none;
+}
+
+/* MEDIA  */
+@media only screen and (max-width:1216px){
+    .advisor-council-container{
+        margin: 0% 10%;
+    margin-top: -25px;
+      
+    }
+}
+@media only screen and (max-width:575px){
+    .advisor-council-container{
+        margin: 0% 1%;
+  
+    }
 }
