--- a/src/pages/Commitees/CabinateMembers/CabinateMembers.css
+++ b/src/pages/Commitees/CabinateMembers/CabinateMembers.css
@@ -1,8 +1,12 @@
 .cabinetcontainer{
     /* padding: 15px; */
-    margin: .5% 8%;
+    margin: .5% 10%;
     overflow-x: hidden;
+    background: #f3f7f5;
+    border-radius: 10px;
+
 }
+ 
 .cabinet-para{
     text-align: center;
     font-size: 60px;
@@ -38,3 +42,5 @@
     font-family:sans-serif;
 
 }
+
+ 
