--- a/src/pages/YoungCongress/YCProgram/YCProgram.css
+++ b/src/pages/YoungCongress/YCProgram/YCProgram.css
@@ -1,7 +1,8 @@
  .ycprogram{
      margin: .5% 10%;
-     background: #ecf3f9;
+     background: #f7f3f5;    
 border-radius: 10px !important;
+padding: 50px 20px;
 
  }
 
